--- a/styles.css
+++ b/styles.css
@@ -8,7 +8,7 @@ body{
 .principal{
     background-image: url("img/Background.png");
     background-repeat: no-repeat;
-    background-size: contain;
+    background-size: cover;
     align-items: center;
     text-align: center;
 }
